# virustotal-CLI

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  configfile.txt  testWebsites.txt
.github/workflows/: check-and-lint.yaml  release-packaging.yaml  test.yaml
src/: configfile_controller.rs  main.rs  request_controller.rs  response_controller.rs  user_input.rs
