[package]
name = "virustotal_folderscanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virustotal = "2.0.0"
regex = "1.5.4"

[replace]
"virustotal:2.0.0" = {git = 'https://github.com/m1guelperez/virustotal.rs.git'}